# rocprof-sys-mcp

./: .gitignore  README.md  pyproject.toml
scripts/: install.sh
src/rocprof_sys_mcp/: __init__.py  __main__.py  server.py
src/rocprof_sys_mcp/profiling/: __init__.py  runner.py
src/rocprof_sys_mcp/reports/: __init__.py  generator.py
src/rocprof_sys_mcp/traces/: __init__.py  analyzer.py  session.py
tests/: __init__.py  test_reports.py  test_runner.py  test_session.py
