[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rocprof-sys-mcp"
version = "0.1.0"
description = "MCP server for rocprofiler-systems profiling integration"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "AMD", email = "noreply@amd.com" }
]
keywords = ["mcp", "profiling", "rocprofiler", "perfetto", "gpu"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "perfetto>=0.16.0",
    "pandas>=2.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]

[project.scripts]
rocprof-sys-mcp = "rocprof_sys_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rocprof_sys_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
